--- a/css/global.css
+++ b/css/global.css
@@ -51,7 +51,7 @@
 	width: 100%;
 	height: 64px;
 	background: #323B44;
-	box-shadow: 3px 3px 5px #000000;
+	box-shadow: 0 3px 5px #000000;
 }
 .nav-bar .container{
 	width: 960px;
