--- a/css/global.css
+++ b/css/global.css
@@ -44,6 +44,9 @@
 .top-bar .container{
 	width: 960px;
 }
+.top-left{
+	width: 420px;
+}
 .top-left-icon{
 	padding: 2px 4px 2px 0;
 	width: 16px;
@@ -51,7 +54,6 @@
 }
 .top-left a{
 	padding-right: 20px;
-	width: 420px;
 	display: block;
 	font-size: 12px;
 	color: #cccccc;
