--- a/css/global.css
+++ b/css/global.css
@@ -59,7 +59,7 @@
 	padding-right: 20px;
 	display: block;
 	font-size: 12px;
-	color: #cccccc;
+	color: #c8cdd4;
 }
 .top-right{
 	padding: 4px 0 4px 0;
@@ -104,7 +104,7 @@
 	font-size: 14px;
 	font-weight: bold;
 	line-height: 1em;
-	color: #cccccc;
+	color: #c8cdd4;
 	text-decoration: none;
 	text-transform: uppercase;
 }
@@ -151,14 +151,14 @@
 #main .container{
 	width: 960px;
 	height: 750px;
-	background: #cccccc;
+	background: #ffffff;
 }
 .slicease{
 	height: 500px;
-	background: #666666;
+	background: #586674;
 }
 .slicease canvas{
-	background: #666666;
+	background: #586674;
 }
 .se-ctrl-pn{
 	padding: 0;
@@ -214,7 +214,7 @@
 	padding: 3px 6px 2px 6px;
 	font-size: 12px;
 	cursor: pointer;
-	background: #999999;
+	background: #868e98;
 }
 
 
@@ -245,13 +245,13 @@
 }
 #footer h5{
 	padding-left: 4px;
-	color: #cccccc;
+	color: #c8cdd4;
 }
 #footer a, #footer i{
 	float: left;
 	padding: 4px;
 	font-size: 12px;
-	color: #cccccc;
+	color: #c8cdd4;
 }
 .copyright{
 	padding: 1.2em;
