--- a/css/gm-sq.css
+++ b/css/gm-sq.css
@@ -1,17 +1,4 @@
-﻿.game-container{
-	-moz-user-select: none;
-	width: 500px;
-	height: 500px;
-	margin: 40px auto;
-	padding: 15px;
-	border-radius: 6px;
-	box-sizing: border-box;
-	cursor: default;
-	position: relative;
-	background: none repeat scroll 0 0 #bbada0;
-}
-
-.scores-container{
+﻿.scores-container{
 	float: right;
 	text-align: right;
 	
@@ -22,7 +9,7 @@
 }
 .score-container{
 	margin-top: 8px;
-	padding: 15px 25px;
+	padding: 15px;
 	height: 25px;
 	border-radius: 3px;
 	
@@ -39,6 +26,38 @@
 	position: absolute;
 	z-index: 100;
 	animation: 600ms ease-in 0s normal both 1 move-up;
+}
+
+.ctrls-container{
+	clear: right;
+	float: right;
+	margin-top: 80px;
+	
+	font-size: 14px;
+	font-weight: bold;
+	line-height: 28px;
+	color: rgba(119, 110, 101, 0.9);
+}
+.ctrl-container{
+	padding: 10px 0;
+	width: 80px;
+	border-radius: 3px;
+	color: #868e98;
+	display: inline-block;
+	position: relative;
+}
+
+.game-container{
+	-moz-user-select: none;
+	width: 500px;
+	height: 500px;
+	margin: 40px auto;
+	padding: 15px;
+	border-radius: 6px;
+	box-sizing: border-box;
+	cursor: default;
+	position: relative;
+	background: none repeat scroll 0 0 #bbada0;
 }
 
 .grid-container{
