--- a/css/gm-sq.css
+++ b/css/gm-sq.css
@@ -1,63 +1,80 @@
-﻿.scores-container{
-	float: right;
-	text-align: right;
+﻿.games-container{
+	margin: 20px auto;
+	width: 960px;
+}
+.self-container{
+	margin: 0 auto;
+	width: 500px;
+}
+.puppet-container, .ctrls-container{
+	margin: 0 15px;
+	width: 400px;
+}
+.puppet-container{
 	
-	font-size: 25px;
+}
+
+.ctrls-container{
+	width: 200px;
+	margin-top: 210px;
+	font-size: 14px;
 	font-weight: bold;
-	line-height: 47px;
+	line-height: 26px;
 	color: rgba(119, 110, 101, 0.9);
 }
-.score-container{
-	margin-top: 8px;
-	padding: 15px;
-	height: 25px;
+.ctrls-container .ctrl-container{
+	padding: 10px 0;
 	border-radius: 3px;
-	
-	text-align: center;
+	color: #868e98;
 	display: inline-block;
+}
+
+.scores-container{
+	font-size: 25px;
+	font-weight: bold;
+	line-height: 42px;
+	text-align: right;
+	color: rgba(119, 110, 101, 0.9);
 	position: relative;
 }
-.score-container .score-addition{
+.score-addition, .score-container{
+	padding: 0 15px;
+	height: 25px;
+	border-radius: 3px;
+	text-align: center;
+	display: inline-block;
+}
+.score-addition{
+	right: 0;
+	height: 25px;
 	font-size: 25px;
 	font-weight: bold;
 	line-height: 25px;
 	color: rgba(119, 110, 101, 0.9);
-	right: 30px;
 	position: absolute;
 	z-index: 100;
 	animation: 600ms ease-in 0s normal both 1 move-up;
 }
-
-.ctrls-container{
-	clear: right;
-	float: right;
-	margin-top: 80px;
-	
-	font-size: 14px;
-	font-weight: bold;
-	line-height: 28px;
-	color: rgba(119, 110, 101, 0.9);
-}
-.ctrl-container{
-	padding: 10px 0;
-	width: 80px;
-	border-radius: 3px;
-	color: #868e98;
-	display: inline-block;
-	position: relative;
+.score-container{
+	margin-top: 22px;
 }
 
 .game-container{
 	-moz-user-select: none;
 	width: 500px;
 	height: 500px;
-	margin: 40px auto;
+	margin-top: 10px;
+	margin-bottom: 20px;
 	padding: 15px;
 	border-radius: 6px;
 	box-sizing: border-box;
 	cursor: default;
 	position: relative;
 	background: none repeat scroll 0 0 #bbada0;
+}
+.puppet-container .game-container{
+	width: 400px;
+	height: 400px;
 }
 
 .grid-container{
@@ -83,6 +100,10 @@
 	border-radius: 3px;
 	background: none repeat scroll 0 0 rgba(238, 228, 218, 0.35);
 }
+.puppet-container .grid-cell{
+	width: 81.25px;
+	height: 81.25px;
+}
 .grid-cell:last-child{
 	margin-right: 0;
 }
@@ -96,6 +117,11 @@
 	line-height: 116.25px;
 	width: 107px;
 }
+.puppet-container .tile, .puppet-container .tile .tile-inner, .puppet-container .tile .tile-inner img{
+	height: 82px;
+	line-height: 91.25px;
+	width: 82px;
+}
 .tile{
 	position: absolute;
 	transition: transform 100ms ease-in-out 0s;
@@ -107,6 +133,9 @@
 	font-weight: bold;
 	text-align: center;
 	z-index: 10;
+}
+.puppet-container .tile .tile-inner{
+	font-size: 45px;
 }
 .tile.tile-2 .tile-inner{
 	background: none repeat scroll 0 0 #eee4da;
@@ -176,6 +205,68 @@
 }
 .tile.tile-position-4-4{
 	transform: translate(363px, 363px);
+}
+
+.tile.p-tile-position-1-1{
+	transform: translate(0px, 0px);
+}
+.tile.p-tile-position-1-2{
+	transform: translate(0px, 96px);
+}
+.tile.p-tile-position-1-3{
+	transform: translate(0px, 192px);
+}
+.tile.p-tile-position-1-4{
+	transform: translate(0px, 288px);
+}
+.tile.p-tile-position-2-1{
+	transform: translate(96px, 0px);
+}
+.tile.p-tile-position-2-2{
+	transform: translate(96px, 96px);
+}
+.tile.p-tile-position-2-3{
+	transform: translate(96px, 192px);
+}
+.tile.p-tile-position-2-4{
+	transform: translate(96px, 288px);
+}
+.tile.p-tile-position-3-1{
+	transform: translate(192px, 0px);
+}
+.tile.p-tile-position-3-2{
+	transform: translate(192px, 96px);
+}
+.tile.p-tile-position-3-3{
+	transform: translate(192px, 192px);
+}
+.tile.p-tile-position-3-4{
+	transform: translate(192px, 288px);
+}
+.tile.p-tile-position-4-1{
+	transform: translate(288px, 0px);
+}
+.tile.p-tile-position-4-2{
+	transform: translate(288px, 96px);
+}
+.tile.p-tile-position-4-3{
+	transform: translate(288px, 192px);
+}
+.tile.p-tile-position-4-4{
+	transform: translate(288px, 288px);
+}
+
+
+.exchange-container{
+	margin-bottom: 20px;
+	padding-top: 10px;
+	text-align: center;
+}
+.exchange-container a{
+	margin: 0 auto;
+	padding: 4px 12px;
+	cursor: pointer;
+	background: #868e98;
 }
 
 
