--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,48 @@
  * solutions
  */
 
+.samplewrap {
+	margin: 4rem auto;
+	width: 100%;
+	overflow: hidden;
+}
+
+.samplewrap .playwrap {
+	float: left;
+	width: 68%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
+.samplewrap .chatwrap {
+	float: right;
+	width: 30%;
+	height: 100%;
+}
+
+@media only screen and (max-width: 568px) {
+.samplewrap .playwrap {
+	float: none;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
+.samplewrap .chatwrap {
+	float: none;
+	margin-top: 2rem;
+	width: 100%;
+	height: 100%;
+}
+}
+
+
+/**
+ * features
+ */
+
 .features, .features section, .features .container {
 	overflow: hidden;
 }
