--- a/css/style.css
+++ b/css/style.css
@@ -52,48 +52,49 @@
  * features
  */
 
-.features, .features section, .features .container {
+.features, .features section {
 	overflow: hidden;
 }
-.features .container {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-around;
-	align-items: baseline;
-}
-.features .container a {
+.features section > span {
+	float: left;
 	margin-top: 2rem;
-	padding: 1.4rem;
 	width: 50%;
+}
+.features section > span a {
+	margin: 0 auto;
+	padding: 1.4rem;
 	max-width: 36rem;
 	border-radius: .25rem;
+	display: block;
 	overflow: hidden;
 }
-.features .container a:hover {
+.features section > span a:hover {
 	box-shadow: inset 0 0 0 1px #AAB4C8;
 }
-.features .container a .img-container {
+.features section > span a .img-container {
 	float: left;
 	margin-right: 1.4rem;
 	max-width: 9.8rem;
 }
-.features .container a .img-container img {
+.features section > span a .img-container img {
 	width: 100%;
 }
-.features .container a h4 {
+.features section > span a h4 {
 	margin: 0 0 1rem;
 }
 
 @media only screen and (max-width: 568px) {
-.features .container a {
-	width: 90%;
+.features section > span {
+	width: 100%;
+}
+.features section > span a {
 	text-align: center;
 }
-.features .container a .img-container {
+.features section > span a .img-container {
 	float: none;
 	margin: 0 auto;
 }
-.features .container a h4 {
+.features section > span a h4 {
 	margin: 1rem 0;
 }
 }
@@ -105,16 +106,24 @@
 
 .input-container {
 	margin-top: .8rem;
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-between;
-	align-items: stretch;
+	width: 100%;
+	height: 2.8rem;
+	position: relative;
+	overflow: hidden;
 }
-.input-container input {
-	margin-right: .6rem;
-	flex: 1 1 auto;
+.input-container span {
+	margin-right: 7.4rem;
+	display: block;
+}
+.input-container span input {
+	padding: .2rem 1%;
+	width: 98%;
+	height: 2.38rem;
 	background-color: #999999;
 }
 .input-container .btn {
-	flex: 0 0 4rem;
+	width: 4rem;
+	top: 0;
+	right: 0;
+	position: absolute;
 }
