--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
  */
 
 .samplewrap {
-	margin: 4rem auto;
+	margin: 40px auto;
 	width: 100%;
 	position: relative;
 	overflow: hidden;
@@ -41,7 +41,7 @@
 }
 
 .samplewrap .chatwrap {
-	margin-top: 2rem;
+	margin-top: 20px;
 	width: 100%;
 	position: relative;
 }
@@ -57,14 +57,14 @@
 }
 .features section > span {
 	float: left;
-	margin-top: 2rem;
+	margin-top: 20px;
 	width: 50%;
 }
 .features section > span a {
 	margin: 0 auto;
-	padding: 1.4rem;
-	max-width: 36rem;
-	border-radius: .25rem;
+	padding: 14px;
+	max-width: 360px;
+	border-radius: 2px;
 	display: block;
 	overflow: hidden;
 }
@@ -73,14 +73,14 @@
 }
 .features section > span a .img-container {
 	float: left;
-	margin-right: 1.4rem;
-	max-width: 9.8rem;
+	margin-right: 14px;
+	max-width: 98px;
 }
 .features section > span a .img-container img {
 	width: 100%;
 }
 .features section > span a h4 {
-	margin: 0 0 1rem;
+	margin: 0 0 10px;
 }
 
 @media only screen and (max-width: 568px) {
@@ -95,7 +95,7 @@
 	margin: 0 auto;
 }
 .features section > span a h4 {
-	margin: 1rem 0;
+	margin: 10px 0;
 }
 }
 
@@ -105,24 +105,24 @@
  */
 
 .input-container {
-	margin-top: .8rem;
+	margin-top: 8px;
 	width: 100%;
-	height: 2.8rem;
+	height: 28px;
 	position: relative;
 	overflow: hidden;
 }
 .input-container span {
-	margin-right: 7.4rem;
+	margin-right: 74px;
 	display: block;
 }
 .input-container span input {
-	padding: .2rem 1%;
+	padding: 2px 1%;
 	width: 98%;
-	height: 2.38rem;
+	height: 24px;
 	background-color: #999999;
 }
 .input-container .btn {
-	width: 4rem;
+	width: 40px;
 	top: 0;
 	right: 0;
 	position: absolute;
