--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,24 @@
 ﻿@import url("global.css") screen;
 
 /**
- * index
+ * slicease
  */
 
 #slicer canvas {
 	background-color: transparent;
+}
+
+
+/**
+ * ol-status
+ */
+
+.ol-status {
+	margin: 40px auto 10px;
+}
+
+.ol-status ~ #playwrap, .ol-status ~ #chatwrap {
+	margin: 0 auto;
 }
 
 
@@ -20,14 +33,18 @@
 	overflow: hidden;
 }
 
-.samplewrap .playwrap {
+.ol-status ~ .samplewrap {
+	margin-top: 0;
+}
+
+.samplewrap #playwrap {
 	width: 68%;
 	height: 100%;
 	top: 0;
 	left: 0;
 }
 
-.samplewrap .chatwrap {
+.samplewrap #chatwrap {
 	width: 30%;
 	height: 100%;
 	right: 0;
@@ -36,15 +53,45 @@
 }
 
 @media only screen and (max-width: 568px) {
-.samplewrap .playwrap {
+.samplewrap #playwrap {
 	width: 100%;
 }
 
-.samplewrap .chatwrap {
+.samplewrap #chatwrap {
 	margin-top: 20px;
 	width: 100%;
 	position: relative;
 }
+}
+
+
+/**
+ * input-container
+ */
+
+.input-container {
+	margin: 10px auto 40px;
+	width: 100%;
+	height: 28px;
+	position: relative;
+	overflow: hidden;
+}
+.input-container span {
+	margin-right: 74px;
+	display: block;
+}
+.input-container span input {
+	padding: 2px 1%;
+	width: 98%;
+	height: 24px;
+	line-height: 24px;
+	background-color: #999999;
+}
+.input-container .btn {
+	width: 40px;
+	top: 0;
+	right: 0;
+	position: absolute;
 }
 
 
@@ -101,30 +148,51 @@
 
 
 /**
- * playease
+ * comment
  */
 
-.input-container {
-	margin-top: 8px;
+.comment form {
+	padding: 40px;
 	width: 100%;
-	height: 28px;
-	position: relative;
-	overflow: hidden;
+	color: #242424;
+	background-color: #F2F5F9;
 }
-.input-container span {
-	margin-right: 74px;
-	display: block;
+.comment .notes {
+	margin: 0 0 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #555A64;
 }
-.input-container span input {
+
+.comment .comment-item {
+	margin-bottom: 10px;
+}
+.comment .comment-item label {
+	font-family: Karbon, Helvetica, sans-serif;
+}
+.comment .comment-item input[type=text], .comment .comment-item input[type=email], 
+.comment .comment-item input[type=url], .comment .comment-item textarea {
 	padding: 2px 1%;
 	width: 98%;
 	height: 24px;
 	line-height: 24px;
-	background-color: #999999;
+	border: none;
+	box-shadow: 0 0 0 1px #c2c9d7;
 }
-.input-container .btn {
-	width: 40px;
-	top: 0;
-	right: 0;
-	position: absolute;
+.comment .comment-item textarea {
+	padding: 6px 1%;
+	height: 70px;
+	line-height: 1;
+	resize: none;
+}
+
+.comment .submit {
+	margin-top: 20px;
+	text-align: right;
+}
+.comment .submit i {
+	margin-right: 10px;
+	color: #242424;
+}
+.comment .submit .btn {
+	padding: 10px 18px;
 }
