--- a/css/style.css
+++ b/css/style.css
@@ -152,8 +152,8 @@
  */
 
 .comment form {
-	padding: 40px;
-	width: 100%;
+	padding: 40px 5%;
+	width: 90%;
 	color: #242424;
 	background-color: #F2F5F9;
 }
