--- a/css/global.css
+++ b/css/global.css
@@ -428,6 +428,7 @@ nav section > ul > li:hover ul {
 
 .wrap {
 	margin: 40px 0;
+	text-align: justify;
 }
 
 .wrap a:not(.btn):link, .wrap a:not(.btn):visited {
