--- a/css/style.css
+++ b/css/style.css
@@ -110,21 +110,29 @@
 .features section > span a {
 	margin: 0 auto;
 	padding: 14px;
-	max-width: 360px;
+	max-width: 400px;
 	border-radius: 2px;
 	display: block;
 	overflow: hidden;
 }
-.features section > span a:hover {
+.features section > span a:not(.btn):link, 
+.features section > span a:not(.btn):visited {
+	color: #BDBDBD;
+}
+.features section > span a:active:not(.btn):link, 
+.features section > span a:focus:not(.btn):link, 
+.features section > span a:hover:not(.btn):link {
+	text-decoration: none;
 	box-shadow: inset 0 0 0 1px #AAB4C8;
 }
 .features section > span a .img-container {
 	float: left;
 	margin-right: 14px;
-	max-width: 98px;
+	max-width: 100px;
 }
 .features section > span a .img-container img {
 	width: 100%;
+	height: 60px;
 }
 .features section > span a h4 {
 	margin: 0 0 10px;
@@ -151,9 +159,12 @@
  * comment
  */
 
+.comment section {
+	border-top: 1px solid #555A64;
+}
 .comment form {
-	padding: 40px 5%;
-	width: 90%;
+	padding: 40px 4%;
+	width: 92%;
 	color: #242424;
 	background-color: #F2F5F9;
 }
