--- a/cms/css/style.css
+++ b/cms/css/style.css
@@ -183,7 +183,7 @@ ul.plan li:first-child {
 	margin: 0 0 10px 0;
 }
 
-.video-container ul {
+.video-container section > ul {
 	width: 100%;
 	height: 599px;
 	list-style-type: none;
