--- a/cms/css/style.css
+++ b/cms/css/style.css
@@ -189,19 +189,19 @@ ul.plan li:first-child {
 	background: #171717;
 	display: inline-block;
 }
-.video-container .toolbar:after {
-	content: "";
-	display: block;
-	height: 0;
-	visibility: hidden;  
-	clear: both;
-}
 .video-container .toolbar > * {
 	float: left;
 	margin-left: 8px;
 	padding: 0;
 	width: 26px;
 	height: 100%;
+}
+.video-container .toolbar > .sep {
+	margin: 4px 0 4px 8px;
+	padding: 32px 1px 0 0;
+	width: 0;
+	height: 0;
+	background-color: #454545;
 }
 .video-container .toolbar > *:last-child {
 	margin-right: 8px;
@@ -218,21 +218,61 @@ ul.plan li:first-child {
 .video-container .toolbar .stop:hover {
 	background-image: url(../image/skins/stopButtonOver.png);
 }
+.video-container .toolbar .col-1 {
+	background-image: url(../image/skins/col1Button.png);
+}
+.video-container .toolbar .col-1:hover {
+	background-image: url(../image/skins/col1ButtonOver.png);
+}
+.video-container .toolbar .col-4 {
+	background-image: url(../image/skins/col4Button.png);
+}
+.video-container .toolbar .col-4:hover {
+	background-image: url(../image/skins/col4ButtonOver.png);
+}
+.video-container .toolbar .col-9 {
+	background-image: url(../image/skins/col9Button.png);
+}
+.video-container .toolbar .col-9:hover {
+	background-image: url(../image/skins/col9ButtonOver.png);
+}
 
 .video-container #video-list {
-	margin-top: 5px;
 	list-style-type: none;
 	display: inline-block;
 }
-.video-container #video-list > li {
+
+.video-container #video-list.col-1 > li {
 	float: left;
-	width: calc((100% - 5px) / 2);
+	width: 100%;
 }
-.video-container #video-list > li:nth-child(odd) {
-	margin: 0 5px 5px 0;
+.video-container #video-list.col-1 > li {
+	margin: 4px 0 0 0;
 }
-.video-container #video-list > li:nth-last-child(2) {
-	margin-bottom: 0;
+
+.video-container #video-list.col-4 > li {
+	float: left;
+	width: calc((100% - 4px) / 2);
+}
+.video-container #video-list.col-4 > li:nth-child(2n-1) {
+	margin: 4px 4px 0 0;
+}
+.video-container #video-list.col-4 > li:nth-child(2n) {
+	margin: 4px 0 0 0;
+}
+
+.video-container #video-list.col-9 > li {
+	float: left;
+	width: calc((100% - 8px) / 3);
+}
+.video-container #video-list.col-9 > li:nth-child(3n-2) {
+	margin: 4px 4px 0 0;
+}
+.video-container #video-list.col-9 > li:nth-child(3n-1) {
+	margin: 4px 4px 0 0;
+}
+.video-container #video-list.col-9 > li:nth-child(3n) {
+	margin: 4px 0 0 0;
 }
 
 
