--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@
 .samplewrap {
 	margin: 40px auto;
 	width: 100%;
+	height: 423px;
 	position: relative;
 }
 
@@ -54,6 +55,7 @@
 	height: 100%;
 	top: 0;
 	left: 0;
+	position: relative;
 }
 
 .samplewrap #chatwrap {
