--- a/cms/css/style.css
+++ b/cms/css/style.css
@@ -238,6 +238,7 @@ ul.plan li:first-child {
 }
 
 .video-container #video-list {
+	width: 100%;
 	list-style-type: none;
 	display: inline-block;
 }
@@ -245,6 +246,7 @@ ul.plan li:first-child {
 .video-container #video-list.col-1 > li {
 	float: left;
 	width: 100%;
+	height: 608px;
 }
 .video-container #video-list.col-1 > li {
 	margin: 4px 0 0 0;
@@ -253,6 +255,7 @@ ul.plan li:first-child {
 .video-container #video-list.col-4 > li {
 	float: left;
 	width: calc((100% - 4px) / 2);
+	height: 303px;
 }
 .video-container #video-list.col-4 > li:nth-child(2n-1) {
 	margin: 4px 4px 0 0;
@@ -264,6 +267,7 @@ ul.plan li:first-child {
 .video-container #video-list.col-9 > li {
 	float: left;
 	width: calc((100% - 8px) / 3);
+	height: 201px;
 }
 .video-container #video-list.col-9 > li:nth-child(3n-2) {
 	margin: 4px 4px 0 0;
